# llaprag

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
docker/: docker-compose.yaml
docker/chromadb/: chroma.sqlite3
llaprag/: document.py  download.py  extract.py  main.py  paper.py  settings.py
llaprag/index/: redis.py
llaprag/llm/: ollama.py  openai.py
llaprag/vector_store/: chromadb.py
requirements/: requirements.in  requirements.txt
